--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -40,10 +40,24 @@
         <a href="#contact" class="btn btn--primary hero__cta-primary">
           {{ t().hero.cta.primary }}
         </a>
-        <a href="#portfolio" class="btn btn--secondary hero__cta-secondary">
-          {{ t().hero.cta.secondary }}
-        </a>
       </div>
+      <a href="#about" class="hero__discover">
+        <span class="hero__discover-text">Conoce más de la carrera</span>
+
+        <svg
+          class="hero__discover-icon"
+          width="35"
+          height="35"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M12 5v14M5 12l7 7 7-7" />
+        </svg>
+      </a>
     </div>
   </div>
 
