--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap');
-@import 'app/styles/variables';
-@import 'app/styles/mixins';
-@import 'app/styles/buttons';
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap");
+@import "app/styles/variables";
+@import "app/styles/mixins";
+@import "app/styles/buttons";
 
 // Reset and base styles
 * {
@@ -21,7 +21,12 @@ body {
   background-color: white;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: $font-display;
   line-height: 1.2;
   color: $secondary-900;
