--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,7 +5,9 @@
       <div class="about__content">
         <h2 class="about__title">
           {{ t().about.title.main }}
-          <span class="about__title-accent">{{ t().about.title.highlight }}</span>
+          <span class="about__title-accent">{{
+            t().about.title.highlight
+          }}</span>
         </h2>
 
         <p class="about__description">
@@ -20,49 +22,97 @@
         <div class="about__features">
           <div class="about__feature">
             <div class="about__feature-icon">
-              <svg class="about__feature-svg" fill="currentColor" viewBox="0 0 20 20">
-                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+              <svg
+                class="about__feature-svg"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                  clip-rule="evenodd"
+                ></path>
               </svg>
             </div>
             <div class="about__feature-content">
-              <h4 class="about__feature-title">{{ t().about.features.feature1.title }}</h4>
-              <p class="about__feature-text">{{ t().about.features.feature1.text }}</p>
+              <h4 class="about__feature-title">
+                {{ t().about.features.feature1.title }}
+              </h4>
+              <p class="about__feature-text">
+                {{ t().about.features.feature1.text }}
+              </p>
             </div>
           </div>
 
           <div class="about__feature">
             <div class="about__feature-icon">
-              <svg class="about__feature-svg" fill="currentColor" viewBox="0 0 20 20">
-                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+              <svg
+                class="about__feature-svg"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                  clip-rule="evenodd"
+                ></path>
               </svg>
             </div>
             <div class="about__feature-content">
-              <h4 class="about__feature-title">{{ t().about.features.feature2.title }}</h4>
-              <p class="about__feature-text">{{ t().about.features.feature2.text }}</p>
+              <h4 class="about__feature-title">
+                {{ t().about.features.feature2.title }}
+              </h4>
+              <p class="about__feature-text">
+                {{ t().about.features.feature2.text }}
+              </p>
             </div>
           </div>
 
           <div class="about__feature">
             <div class="about__feature-icon">
-              <svg class="about__feature-svg" fill="currentColor" viewBox="0 0 20 20">
-                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+              <svg
+                class="about__feature-svg"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                  clip-rule="evenodd"
+                ></path>
               </svg>
             </div>
             <div class="about__feature-content">
-              <h4 class="about__feature-title">{{ t().about.features.feature3.title }}</h4>
-              <p class="about__feature-text">{{ t().about.features.feature3.text }}</p>
+              <h4 class="about__feature-title">
+                {{ t().about.features.feature3.title }}
+              </h4>
+              <p class="about__feature-text">
+                {{ t().about.features.feature3.text }}
+              </p>
             </div>
           </div>
 
           <div class="about__feature">
             <div class="about__feature-icon">
-              <svg class="about__feature-svg" fill="currentColor" viewBox="0 0 20 20">
-                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+              <svg
+                class="about__feature-svg"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                  clip-rule="evenodd"
+                ></path>
               </svg>
             </div>
             <div class="about__feature-content">
-              <h4 class="about__feature-title">{{ t().about.features.feature4.title }}</h4>
-              <p class="about__feature-text">{{ t().about.features.feature4.text }}</p>
+              <h4 class="about__feature-title">
+                {{ t().about.features.feature4.title }}
+              </h4>
+              <p class="about__feature-text">
+                {{ t().about.features.feature4.text }}
+              </p>
             </div>
           </div>
         </div>
@@ -71,7 +121,6 @@
           {{ t().about.cta }}
         </a>
       </div>
-
       <!-- Image -->
       <div class="about__image-wrapper">
         <div class="about__image-container">
@@ -80,12 +129,14 @@
             src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
             alt="{{ t().about.imageAlt }}"
             class="about__image"
-          >
+          />
 
           <!-- Floating Badge -->
           <div class="about__badge">
             <div class="about__badge-content">
-              <div class="about__badge-number">{{ t().about.badge.number }}</div>
+              <div class="about__badge-number">
+                {{ t().about.badge.number }}
+              </div>
               <div class="about__badge-text">{{ t().about.badge.text }}</div>
             </div>
           </div>
