carrousel is finally working!

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -33,9 +33,15 @@
       </div>
 
       <!-- CTA Button -->
-      <div class="header__cta">
-        <a href="#contact" class="btn btn--primary">
-          {{ t().header.cta }}
+      <div class="header__socials">
+        <a href="https://whatsapp.com" target="_blank">
+          <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
+        </a>
+        <a href="https://facebook.com" target="_blank">
+          <img src="/icons/facebook-line.svg" alt="Facebook" />
+        </a>
+        <a href="https://instagram.com" target="_blank">
+          <img src="/icons/instagram-line.svg" alt="Instagram" />
         </a>
       </div>
 
@@ -100,13 +106,16 @@
           class="header__mobile-link"
           >{{ t().header.navigation.contact }}</a
         >
-        <div class="header__mobile-cta">
-          <a
-            href="#contact"
-            (click)="closeMobileMenu()"
-            class="btn btn--primary btn--full"
-          >
-            {{ t().header.cta }}
+
+        <div class="header__socials">
+          <a href="https://whatsapp.com" target="_blank">
+            <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
+          </a>
+          <a href="https://facebook.com" target="_blank">
+            <img src="/icons/facebook-line.svg" alt="Facebook" />
+          </a>
+          <a href="https://instagram.com" target="_blank">
+            <img src="/icons/instagram-line.svg" alt="Instagram" />
           </a>
         </div>
       </div>
