--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -42,7 +42,7 @@
         </a>
       </div>
       <a href="#about" class="hero__discover">
-        <span class="hero__discover-text">Conoce más de la carrera</span>
+        <span class="hero__discover-text">Inscripciones 2026</span>
 
         <svg
           class="hero__discover-icon"
