--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -16,7 +16,7 @@
     inset: 0;
     z-index: -2;
 
-    background-image: url("/hero-section-background.jpg");
+    background-image: url("/hero-background.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
