--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -62,13 +62,13 @@
 
 @mixin btn-secondary {
   @include btn-base;
-  background-color: $secondary-700;
-  color: $primary-500;
+  background-color: $primary-500;
+  color: $primary-50;
   border: 1px solid $secondary-300;
 
   &:hover:not(:disabled) {
-    background-color: $secondary-600;
-    border-color: $secondary-500;
+    background-color: $primary-50;
+    color: $primary-500;
   }
 }
 
