--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,7 +11,7 @@
     <app-about></app-about>
 
     <!-- Services Section -->
-    <app-services></app-services>
+    <app-what-includes></app-what-includes>
 
     <!-- Portfolio Section -->
     <app-portfolio></app-portfolio>
