categories section was added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,7 @@
     <app-what-includes></app-what-includes>
 
     <!-- Portfolio Section -->
-    <app-portfolio></app-portfolio>
+    <app-categories></app-categories>
 
     <!-- Testimonials Section -->
     <app-testimonials></app-testimonials>
