--- a/src/app/components/categories/categories.component.scss
+++ b/src/app/components/categories/categories.component.scss
@@ -1,7 +1,7 @@
-@import '../../styles/variables';
-@import '../../styles/mixins';
+@import "../../styles/variables";
+@import "../../styles/mixins";
 
-.portfolio {
+.categories {
   @include section-padding;
   background-color: $secondary-50;
 
@@ -52,6 +52,10 @@
     opacity: 1;
     transform: translateY(0);
     transition: all $transition-normal;
+    border-radius: 1rem;
+    padding: $spacing-xl;
+    color: white; // Las cards tienen fondos oscuros/colores fuertes
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   }
 
   &__image-wrapper {
@@ -119,19 +123,22 @@
   }
 
   &__content {
-    padding: $spacing-lg;
+    display: flex;
+    flex-direction: column;
   }
 
   &__card-title {
-    font-size: 1.25rem;
+    font-size: 5rem;
     font-weight: 600;
-    color: $secondary-900;
+    color: $primary-500;
     margin-bottom: $spacing-md;
     transition: color $transition-normal;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__card-description {
-    color: $secondary-600;
+    color: $primary-500;
     margin-bottom: $spacing-md;
     line-height: 1.6;
   }
@@ -140,12 +147,12 @@
     display: flex;
     align-items: center;
     font-size: 0.875rem;
-    color: $secondary-500;
+    color: $primary-500;
   }
 
   &__stat {
     &--price {
-      color: $primary-600;
+      color: $primary-500;
       font-weight: 600;
     }
   }
@@ -170,16 +177,30 @@
 
   // Hover effects
   &__card:hover {
-    .portfolio__image {
+    transform: translateY(-6px);
+
+    .categories__image {
       transform: scale(1.05);
     }
 
-    .portfolio__overlay {
+    .categories__overlay {
       opacity: 1;
     }
 
-    .portfolio__card-title {
-      color: $primary-600;
+    .categories__card-title {
+      color: white;
     }
+  }
+
+  &__card--3k {
+    background: $secondary-200;
+  }
+
+  &__card--5k {
+    background: $accent-500;
+  }
+
+  &__card--10k {
+    background: $warning-500;
   }
 }
