routing was fixed

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,8 +21,8 @@
         <a href="#services" class="header__nav-link">{{
           t().header.navigation.services
         }}</a>
-        <a href="#portfolio" class="header__nav-link">{{
-          t().header.navigation.portfolio
+        <a href="#categories" class="header__nav-link">{{
+          t().header.navigation.categories
         }}</a>
         <a href="#testimonials" class="header__nav-link">{{
           t().header.navigation.testimonials
@@ -89,10 +89,10 @@
           >{{ t().header.navigation.services }}</a
         >
         <a
-          href="#portfolio"
+          href="#categories"
           (click)="closeMobileMenu()"
           class="header__mobile-link"
-          >{{ t().header.navigation.portfolio }}</a
+          >{{ t().header.navigation.categories }}</a
         >
         <a
           href="#testimonials"
