--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,11 +10,9 @@
     <!-- About Section -->
     <app-about></app-about>
 
-    <!-- Services Section -->
-    <app-what-includes></app-what-includes>
-
-    <!-- Portfolio Section -->
     <app-categories></app-categories>
+    <app-registration-steps></app-registration-steps>
+    <app-what-includes></app-what-includes>
 
     <!-- Testimonials Section -->
     <app-testimonials></app-testimonials>
