--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -111,10 +111,16 @@
           <a href="https://whatsapp.com" target="_blank">
             <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
           </a>
-          <a href="https://facebook.com" target="_blank">
+          <a
+            href="https://www.facebook.com/profile.php?id=61572904043581"
+            target="_blank"
+          >
             <img src="/icons/facebook-line.svg" alt="Facebook" />
           </a>
-          <a href="https://instagram.com" target="_blank">
+          <a
+            href="https://www.instagram.com/corramos_por_un_sueno/"
+            target="_blank"
+          >
             <img src="/icons/instagram-line.svg" alt="Instagram" />
           </a>
         </div>
