--- a/src/app/components/categories/categories.component.scss
+++ b/src/app/components/categories/categories.component.scss
@@ -146,7 +146,8 @@
   &__stats {
     display: flex;
     align-items: center;
-    font-size: 0.875rem;
+    font-weight: bolder;
+    font-size: 1rem;
     color: $primary-500;
   }
 
