--- a/src/app/components/registration-steps/registration-steps.component.html
+++ b/src/app/components/registration-steps/registration-steps.component.html
@@ -1,12 +1,12 @@
-<section id="home" class="registrationSteps">
+<section id="home" class="registration-steps">
   <!-- Background Elements -->
-  <div class="registrationSteps__background"></div>
-  <div class="registrationSteps__pattern"></div>
+  <div class="registration-steps__background"></div>
+  <div class="registration-steps__pattern"></div>
 
-  <div class="registrationSteps__container">
-    <div class="registrationSteps__content">
-      <h1 class="registrationSteps__title">
-        <span class="registrationSteps__title-accent">
+  <div class="registration-steps__container">
+    <div class="registration-steps__content">
+      <h1 class="registration-steps__title">
+        <span class="registration-steps__title-accent">
           {{ t().registrationSteps.title }}
         </span>
       </h1>
@@ -29,13 +29,35 @@
             <div class="steps__stats">
               <span class="steps__stat">{{ d.detail }}</span>
             </div>
+            <br />
+            <a href="#contact" class="btn btn--primary">
+              {{ t().hero.cta.primary }}
+            </a>
           </div>
         </div>
         }
       </div>
-      <p class="registrationSteps__subtitle">
+      <br />
+      <br />
+      <p class="registration-steps__subtitle">
         {{ t().registrationSteps.subtitle }}
       </p>
+    </div>
+    <div class="registration-steps__detail">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel placeat
+        pariatur quibusdam dolores ad suscipit ea voluptate illum unde
+        accusantium impedit possimus ducimus quasi, distinctio aliquid veniam
+        assumenda incidunt tempora! Lorem ipsum dolor sit, amet consectetur
+        adipisicing elit. Vel placeat pariatur quibusdam dolores ad suscipit ea
+        voluptate illum unde accusantium impedit possimus ducimus quasi,
+        distinctio aliquid veniam assumenda incidunt tempora!
+      </p>
+      <div class="socials">
+        <a href="https://whatsapp.com" target="_blank">
+          <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
+        </a>
+      </div>
     </div>
   </div>
 </section>
