--- a/src/app/components/registration-steps/registration-steps.component.scss
+++ b/src/app/components/registration-steps/registration-steps.component.scss
@@ -4,7 +4,7 @@
 /* ===============================
    REGISTRATION STEPS
 ================================ */
-.registrationSteps {
+.registration-steps {
   position: relative;
   min-height: 100vh;
   display: grid;
@@ -72,15 +72,27 @@
   }
 
   &__subtitle {
-    max-width: 36rem;
+    font-size: 2rem !important;
+    font-weight: bolder;
     margin: 0 auto $spacing-xl;
     line-height: 1.5;
     color: rgba(255, 255, 255, 0.9);
     font-size: clamp(1rem, 2vw, 1.5rem);
   }
+
+  &__detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    max-width: 50rem;
+    text-align: left;
+
+    @include tablet {
+      flex-direction: row;
+    }
+  }
 }
-@import "../../styles/variables";
-@import "../../styles/mixins";
 
 .steps {
   @include section-padding;
@@ -119,11 +131,7 @@
     gap: $spacing-2xl;
 
     @include tablet {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include desktop {
-      grid-template-columns: repeat(3, 1fr);
+      display: flex;
     }
   }
 
@@ -135,7 +143,7 @@
     transition: all $transition-normal;
     border-radius: 1rem;
     padding: $spacing-xl;
-    color: white; // Las cards tienen fondos oscuros/colores fuertes
+    color: white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   }
 
@@ -242,6 +250,7 @@
 
   &__card-description {
     color: $primary-500;
+    font-size: 3rem;
     margin-bottom: $spacing-md;
     line-height: 1.6;
   }
@@ -294,16 +303,58 @@
       color: white;
     }
   }
+}
 
-  &__card--3k {
-    background: $secondary-200;
-  }
+.socials {
+  display: flex;
+  gap: 0.75rem;
+  background: $secondary-50;
+  border-radius: $radius-2xl;
 
-  &__card--5k {
-    background: $accent-500;
-  }
+  a {
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.12);
+    backdrop-filter: blur(4px);
+    transition: 0.25s ease;
+    position: relative;
 
-  &__card--10k {
-    background: $warning-500;
+    &:hover {
+      background: $danger-500;
+    }
+
+    /* Ocultar el <img> */
+    img {
+      display: none;
+    }
+
+    &::before {
+      content: "";
+      width: 3rem;
+      height: 3rem;
+
+      mask-size: contain;
+      -webkit-mask-size: contain;
+      mask-repeat: no-repeat;
+      -webkit-mask-repeat: no-repeat;
+      mask-position: center;
+      -webkit-mask-position: center;
+
+      background-color: $danger-500; // 🔥 Color exacto
+      display: block;
+    }
+
+    &:hover::before {
+      background-color: white; // o el color que quieras en hover
+    }
+
+    &[href*="whatsapp"]::before {
+      mask-image: url("/icons/whatsapp-line.svg");
+      -webkit-mask-image: url("/icons/whatsapp-line.svg");
+    }
   }
 }
