--- a/src/app/components/registration-steps/registration-steps.component.html
+++ b/src/app/components/registration-steps/registration-steps.component.html
@@ -1,4 +1,4 @@
-<section id="home" class="registration-steps">
+<section id="registration-steps" class="registration-steps">
   <!-- Background Elements -->
   <div class="registration-steps__background"></div>
   <div class="registration-steps__pattern"></div>
