--- a/src/app/components/what-includes/what-includes.component.html
+++ b/src/app/components/what-includes/what-includes.component.html
@@ -1,4 +1,4 @@
-<section id="home" class="what-includes">
+<section id="what-includes" class="what-includes">
   <!-- Background Elements -->
   <div class="what-includes__background"></div>
   <div class="what-includes__pattern"></div>
